<resources>
    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="title">Temperature conversion</string>>
    <string name="sccore">0</string>>
    <string name="btn1">+3 Points</string>>
    <string name="btn2">+2 Points</string>>
    <string name="btn3">+1 Points</string>>
    <string name="btn4">RESET</string>
    <string name="hint_1">Please enter temperature with unit</string>
    <string name="save">save</string>
    <string name="name">Team A</string>
    <string name="nameb">TeamB</string>
    <string name="hint_labe">Please input RMB</string>
    <string name="intr">外汇转换</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="won">Won</string>
    <string name="conversion">conversion</string>
    <string name="nodata">NoData</string>
    <string name="config_label">config</string>
    <string name="label_open_list">OpenLIst</string>
    <string name="school_title" translatable="false">西南财经大学经济信息工程学院通知公告</string>
    <string name="school_hint" translatable="false">请输入关键字</string>
    <string name="school_btn" translatable="false">查询</string>
</resources>
